# ry

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish-python.yml  release-please.yml
src/: config.rs  diagnostics.rs  generation.rs  inline.rs  lib.rs  main.rs  module.rs  packages.rs  treesitter.rs
tests/: fixtures.rs
tests/fixtures/basic_async_to_sync/: expected.py  input.py  output.txt  ry.yml
tests/fixtures/outdated_generated_code/: input.py  output.txt
tests/fixtures/tag_rules/: expected.py  input.py  output.txt  ry.yml
