[package]
name = "ry"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ry"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
glob = "0.3"
similar = "2"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
